# Dodona-Oefeningen

./: .gitignore  README.md
3rd Year/1. Starten met dodona/: 4. Meerdere variabelen invullen en uitvoeren.py  5. Print-commando uitbreiden.py  6. Soorten input.py  7. Operatoren en berekeningen.py
3rd Year/2. Oefeningen op variabelen en operatoren/: 1. How old are you.py  2. Optellen van 2 gehele getallen.py  3. Oppervlakte van een rechthoek.py  4. Oppervlakte van een cirkel berekenen.py  5. Perimeter of a triangle.py  6. Omzetting van Celsius naar Fahrenheit.py  7. BMI berekenen.py
3rd Year/3. Len-commando/: 1. Langste dorpsnaam in Europa.py
3rd Year/4. Geavanceerde wiskundige berekeningen/: 1. moeilijkere wiskundige berekeningen met de Math module.py  2. Pythagoras.py  3. Sinus.py
3rd Year/5. Keuze/: 1. Beslissingen nemen met het if-commando.py  2. BMI + waarden.py  3. Toestand van water.py  4. Grootste van 3 getallen.py  5. Hondenjaren in mensenjaren.py  6. Waar staat je huis.py  7. Rock-paper-scissors.py  8. Gravity.py  9. The black sheep.py
3rd Year/6. Extra oef/: 1. Goomba.py  2. Mario en de Goomba's.py  3. M&Ms.py  3.5 M&Ms.py  7. Seasons.py
3rd_Year/1_Starten_met_dodona/: 3_Invoer_van_de_gebruiker_met_het_input_commando.py  (+2 more)
4th Year/: Tester.py
6th_Year/1_pygame/: .python-version  pyproject.toml
6th_Year/1_pygame/src/: main.py
6th_Year/1_pygame/src/exercise/: cirkelmetkeys.py
6th_Year/1_pygame/src/utils/scripts/: fpscounter.py  player.py
6th_Year/1_pygame/src/utils/settings/: settings.py
Extra oef 4th year/: 1. Tester.py
(+218 files in other folders)
